# libparse

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/: Conan.cmake
examples/: 3_int_parsing.cpp  CMakeLists.txt  big_string_parsing.cpp  cyclic_parsing.cpp
include/parser/: parser.hpp
include/prs/: parser.hpp
test/: CMakeLists.txt  always_test.hpp  any_test.cpp  combine_test.cpp  ele_test.cpp  empty_test.cpp  exactly_n_test.cpp  fail_test.cpp  fmap_test.cpp  if_char_satisfy.cpp  item_test.cpp  left_test.cpp  main_test.cpp  many1_if_test.cpp  many1_of_test.cpp  many1_test.cpp  many_if_test.cpp  many_of_test.cpp  many_test.cpp  none_of_test.cpp  one_of_test.cpp  operator_or_test.cpp  or_with_test.cpp  pipe_test.cpp  right_test.cpp  satisfy_test.cpp  seperated_by_test.cpp  sequence_test.cpp  str_test.cpp  symbol_test.cpp  test_include.hpp  then_test.cpp  then_with_test.cpp  transform_test.cpp  unconsume_str_test.cpp
