file(GLOB_RECURSE test_list "*_test.cpp")
add_executable(libparse_tests ${test_list})
target_include_directories(libparse_tests PRIVATE ../include)
target_link_libraries(libparse_tests PRIVATE project_warnings)
target_link_libraries(libparse_tests PUBLIC doctest::doctest)
target_link_libraries(libparse_tests PRIVATE project_options)
add_test(NAME libparse_tests COMMAND libparse_tests)
